--- a/getCoordinates.ipynb
+++ b/getCoordinates.ipynb
@@ -56,7 +56,7 @@
     "df['str_geometry'] = df.str_geometry.apply(lambda x: [x[1],x[0]])\n",
     "df['latitude'] = df.str_geometry.apply(lambda x: x[0])\n",
     "df['longitude'] = df.str_geometry.apply(lambda x: x[1])\n",
-    "\n"
+    "df['ini'] = 1\n"
    ]
   },
   {
