--- a/getCoordinates.ipynb
+++ b/getCoordinates.ipynb
@@ -29530,7 +29530,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Class to represent a graph\n",
+    "# Class to represent a graph (https://www.geeksforgeeks.org/kruskals-minimum-spanning-tree-algorithm-greedy-algo-2/)\n",
     "class Graph:\n",
     "\n",
     "\tdef __init__(self, vertices):\n",
@@ -29619,7 +29619,7 @@
     "\t\t\tminimumCost += k\n",
     "\t\t\tresult_decode += [(df[df.enumerate == i]['Name'].iloc[0],df[df.enumerate == j]['Name'].iloc[0],k)]\n",
     "\t\treturn result_decode,round(minimumCost,10)\n",
-    "\tdef boruvkaMST(self):\n",
+    "\tdef boruvkaMST(self): # (https://www.geeksforgeeks.org/boruvkas-algorithm-greedy-algo-9/)\n",
     "\t\tparent = []\n",
     "\t\trank = []\n",
     "\n",
@@ -29694,6 +29694,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# https://www.geeksforgeeks.org/prims-minimum-spanning-tree-mst-greedy-algo-5/\n",
     "from collections import defaultdict\n",
     "class Heap():\n",
     "\n",
